# AI-DREAMER

./: context_openai_agent.ipynb  panacloud_agent_sdk.ipynb  streaming_agent_sdk.ipynb
AI-Agents-OpenAI/: my_agent_sdk.ipynb
AI-Agents-OpenAI /openai-sdk/: agent_sdk.ipynb
AI-Agents-OpenAI/data-by-api/: main.py  pyproject.toml
AI-Agents-OpenAI/data-by-api/configurations/: config.py
AI-Agents-OpenAI/data-by-api/my_agent/: api_agent.py
AI-Agents-OpenAI/data-by-api/my_tools/: my_tools.py
AI-Agents-OpenAI/openai-sdk/: 01_hello_agent.ipynb
Agent-Native/fastdaca-1/: main.py  model.py  pyproject.toml  test_main.py
Agents-practice-june-2025/: agents.ipynb  dhq_jhelum.ipynb
Agents-practice-june-2025/hello-agent-async/: pyproject.toml
Agents-practice-june-2025/hello-agent-async/src/hello_agent_async/: __init__.py  main.py
Agents-practice-june-2025/openai-practice/: new_agent.py  pyproject.toml
Agents-practice-june-2025/openai-practice/src/openai_practice/: __init__.py  main.py  utils_fun.py
Agents-practice-june-2025/tool/parallel_tool/: pyproject.toml
Agents-practice-june-2025/tool/parallel_tool/src/parallel_tool/: __init__.py  main.py
July-2025/: agentic_practice.ipynb  agents.ipynb
July-2025/agent-practice-one/: main.py  pyproject.toml  streamed.py  weather.py
July-2025/agent-practice-one/agent_configuration/: agents_config.py
July-2025/agent-practice-one/my_agents/: gemini_agent.py
July-2025/agent-practice-one/tools/: location_agent.py  weather_agent.py
July-2025/translation-agents/: main.py  pyproject.toml
LiteLM/: litellm_agent_sdk.ipynb
Panacloud_Assignment/: panacloud_agent_sdk.ipynb
agent_as_tool/: agent_as_tool.ipynb
august-2025/hello-mcp/: client.py  main.py  pyproject.toml
chainlit/: readme.md
chainlit/chainlit-hello/: main.py  pyproject.toml
context-openai-sdk/: context_openai_agent.ipynb
guardrail-openai/: guardRail_openAi_sdk.ipynb
guardrail_openai/: guardRail_openAi_sdk.ipynb
home-work/: .env  main.py  mini_test.py  new-env.py  pyproject.toml
hooks/: hooks.ipynb
imtiaz-mart-ai/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
imtiaz-mart-ai/src/imtiaz_mart_ai/: __init__.py  main.py
imtiaz-mart-ai/src/imtiaz_mart_ai/api/v1/: router.py
imtiaz-mart-ai/src/imtiaz_mart_ai/api/v1/endpoints/: chat.py  health.py
imtiaz-mart-ai/src/imtiaz_mart_ai/api/v1/schemas/: requests.py  responses.py
imtiaz-mart-ai/src/imtiaz_mart_ai/config/: __init__.py  settings.py
imtiaz-mart-ai/src/imtiaz_mart_ai/infrastructure/: llm_client.py
isp_agent/: .gitignore  main.py  pyproject.toml
mark-downn/: Markdown_practice.ipynb
model context protocol/MCP-Server/mcp_practice/: connection.py  main.py  pyproject.toml
model context protocol/MCP-Server/mcp_practice/configuration/: config.py
model context protocol/MCP-Server/mcp_practice/mcpClinet/: mcp_client.py  test_minimal.py
model context protocol/MCP-Server/mcp_practice/mcpTool/: mcp_tool.py
model context protocol/MCP-Server/mcp_practice/myResources/: my_python.py  my_resouce_method.py  notes.txt
model context protocol/MCP-Server/mcp_server/: pyproject.toml
model context protocol/mcp/: pyproject.toml
model context protocol/mcp-sep-job/: main.py  mcp_client.py  mcp_server.py  pyproject.toml
model context protocol/mcp-sep-job/docs/: python_docs.py
model context protocol/mcp-sep-job/my_mcp_client/: my_mcp_client.py
model context protocol/mcp-server-demo/: client.py  main.py  pyproject.toml
model context protocol/mcp-test/: mcp_client.py  mcp_server.py  pyproject.toml
openai-agent-practice/OpenAI_Agentic_sdk/: .env  main.py  pyproject.toml
openai-agent-practice/OpenAI_Agentic_sdk/agents_configurations/: agent_config.py
openai-agent-practice/OpenAI_Agentic_sdk/multi_agent/: multi_agents.py
openai-agent-practice/OpenAI_Agentic_sdk/schemas/: pythone_tutor.py
openai-agent-practice/agent-day-1/: .gitignore  main.py  pyproject.toml  user_memory.json
openai-agent-practice/agent-day-1/agent_layer/: agent_005.py  agent_05.py  agent_1.py  agent_2.py  agent_3.py  agent_4.py  agent_5.py  agent_6.py
openai-agent-practice/agent-day-1/configuration_layer/: config_1.py
openai-agent-practice/agent-day-1/context_layer/: shopping_context.py  shopping_day4.py
openai-agent-practice/agent-day-1/runner_layer/: runner_05.py  runner_1.py  runner_4.py  runner_5.py  runner_6.py
openai-agent-practice/agent-day-1/schemas/: shopping_schemas.py
openai-agent-practice/agent-day-1/tools_layer/: tools_1.py  tools_4.py  tools_5.py  tools_6.py
openai-agent-practice/agent-model-settings/agent-setting/: main.py  pyproject.toml  terminals.py
openai-agent-practice/agentic-sdk-week-two/: .gitignore  main.py  pyproject.toml
openai-agent-practice/agentic-sdk-week-two/agent_layer/: agent_10.py
openai-agent-practice/agentic-sdk-week-two/configuration_layer/: config.py  db_config.py
openai-agent-practice/agentic-sdk-week-two/runner_layer/: runner_10.py
openai-agent-practice/agentic-sdk-week-two/tools_layer/: tools_10.py
openai-agent-practice/chainlit-practice/: main.py  pyproject.toml  recipe.py
openai-agent-practice/chainlit-practice/src/chainlit_practice/: __init__.py  main.py
openai-agent-practice/deep-agent/: main.py  pyproject.toml
streaming/: streaming_agent_sdk.ipynb
