[project]
name = "imtiaz-mart-ai"
version = "0.1.0"
description = "Agentic AI backend for Imtiaz Mart — event-driven shopping assistant"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Wajid Minhas", email = "your.email@example.com"}
]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # LLM clients
    "openai>=1.35.0",
    "httpx>=0.27.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Infrastructure
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",  # Retry logic
    "orjson>=3.10.0",   # Fast JSON
    "attrs==26.1.0",
    "griffelib==2.1.0",
    "openai-agents>=0.18.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # For TestClient
    "ruff>=0.4.0",    # Linting + formatting
    "mypy>=1.10.0",   # Type checking
]

[project.scripts]
# CLI commands
imtiaz-run = "imtiaz_mart_ai.main:main"
imtiaz-migrate = "imtiaz_mart_ai.infrastructure.db:migrate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imtiaz_mart_ai"]

# ─────────────────────────────────────────
# RUFF (Linting & Formatting)
# ─────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────
# MYPY (Type Checking)
# ─────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

# ─────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/imtiaz_mart_ai --cov-report=term-missing"
