[project]
name = "openai-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wajidminhas", email = "shanitent667@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
openai-practice = "openai_practice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
