[project]
name = "agent-day-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decouple>=0.0.7",
    "openai-agents>=0.17.4",
    "python-dotenv>=1.2.2",
]

name = "agent-day-1"
version = "0.1.0"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.pythonpath]

paths = ["."]