[project]
name = "parallel-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wajidminhas", email = "shanitent667@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.19",
]

[project.scripts]
parallel-tool = "parallel_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
